# compiler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO.md  ast.dot  example.prog  runme.sh
examples/: already_defined.prog  big.prog  factorial.prog  shadowing.prog
scripts/: coverage.sh  format.sh  tidy.sh
src/: CMakeLists.txt  main.cpp
src/codegen/: CMakeLists.txt  codegen.cpp  codegen.hpp  compile.cpp  compile.hpp  emit_ir.cpp  emit_ir.hpp
src/ecs/: ecs.hpp  used_components.hpp
src/interpreter/: CMakeLists.txt  interpreter.cpp  interpreter.hpp
src/ir/: CMakeLists.txt  codegen.cpp  compile.cpp  emit_ir.cpp  emit_ir.hpp
src/language_data/: grammar.txt
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp  tokens.hpp
src/misc/: CMakeLists.txt  dump_ast.cpp  dump_ast.hpp
src/parser/: CMakeLists.txt  ast.hpp  dump_ast.cpp  dump_ast.hpp  parser.cpp  parser.hpp  tokens.hpp
src/semantics/: CMakeLists.txt  build_symtab.cpp  build_symtab.hpp  interpreter.cpp  interpreter.hpp  symbols.hpp  types.hpp
src/utils/: overloaded.hpp  source_position.hpp  trie.hpp  type_tuple.hpp
tests/: CMakeLists.txt
tests/ecs/: CMakeLists.txt  ecs.cpp
tests/lexer/: CMakeLists.txt  lexer.cpp
tests/utils/: CMakeLists.txt  type_tuple.cpp
