CMAKE_MINIMUM_REQUIRED(VERSION 3.22)

PROJECT(formal_languages)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_CXX_COMPILER g++)
SET(CMAKE_CXX_STANDARD 23)

SET(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror")

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 -fsanitize=address")
ELSEIF(CMAKE_BUILD_TYPE STREQUAL "CodeCoverage")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 --coverage")
ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Release")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -DNDEBUG")
ELSE()
  MESSAGE(NOTICE "unknown build type defaulted to Release")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -DNDEBUG")
ENDIF()

SET(
  CMAKE_RUNTIME_OUTPUT_DIRECTORY
  ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}
)

INCLUDE_DIRECTORIES(src)

ADD_SUBDIRECTORY(src)

IF (ENABLE_TESTS)
  ENABLE_TESTING()
  ADD_SUBDIRECTORY(tests)
ENDIF()

