FIND_PACKAGE(LLVM REQUIRED CONFIG)

ADD_LIBRARY(emit_ir STATIC emit_ir.cpp)
TARGET_COMPILE_DEFINITIONS(emit_ir PRIVATE ${LLVM_DEFINITIONS})
TARGET_INCLUDE_DIRECTORIES(emit_ir SYSTEM PRIVATE ${LLVM_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(emit_ir PRIVATE project_options)

ADD_LIBRARY(compile STATIC compile.cpp)
TARGET_COMPILE_DEFINITIONS(compile PRIVATE ${LLVM_DEFINITIONS})
TARGET_INCLUDE_DIRECTORIES(compile SYSTEM PRIVATE ${LLVM_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(compile PRIVATE project_options)

ADD_LIBRARY(codegen STATIC codegen.cpp)
TARGET_COMPILE_DEFINITIONS(codegen PRIVATE ${LLVM_DEFINITIONS})
TARGET_INCLUDE_DIRECTORIES(codegen SYSTEM PRIVATE ${LLVM_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(codegen PRIVATE emit_ir compile project_options)

llvm_config(emit_ir USE_SHARED all)
llvm_config(compile USE_SHARED all)
llvm_config(codegen USE_SHARED all)
